--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -52,6 +52,12 @@ License: You must have a valid license purchased only from https://themes.getboo
       id="layout-styles-anchor"
       href="%PUBLIC_URL%/css/splash-screen.css"
     />
+    <!-- CUSTOM sTYLES-->
+    <link
+      rel="stylesheet"
+      id="layout-styles-anchor"
+      href="%PUBLIC_URL%/css/styles.css"
+    />
     <!--  Setup `default`, `es2015`, `es2016`, `es2017`, and `Intl` polyfills from https://cdn.polyfill.io/v3/url-builder/ -->
     <script
       crossorigin="anonymous"
